4B/cs444/tests/site/pass/pass_intliterals.joos
/* pass: int literals */
public class A {
  public A() {}
  protected int x = 42;
}

