4B/cs444/tests/site/fail/fail_omittedlocalinitializer.joos
/* fail: omitted local initializer */
public class A {
  public A() {}
  public void m() {
    int x /* = 0 */;
  }
}

